--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>세미네부엌 플랫폼</title>
     <style>
         * {
@@ -20,9 +20,7 @@
         }
         body {
             color: #333;
-            line-height: 1;
-            min-width: 1440px;
-             
+            line-height: 1; 
         }
         header {
             height: 100px;
