--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         body {
             color: #333;
             line-height: 1; 
+            min-width:1440px;
         }
         header {
             height: 100px;
