--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         body {
             color: #333;
             line-height: 1; 
-             
+            min-width:1920px
         }
         header {
             height: 100px;
